--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -39,7 +39,7 @@
             padding: 30px 40px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
+            width: 150%;
             max-width: 400px;
         }
 
@@ -164,7 +164,7 @@
 </head>
 <body>
 <div class="main-container">
-    <h1 class="system-title">校园二手物品交易平台</h1>
+    <h1 class="system-title">网上购物系统</h1>
     <div class="form-container">
         <h1>用户登录</h1>
         <form id="loginForm">
