--- a/src/main/resources/static/my-favorites.html
+++ b/src/main/resources/static/my-favorites.html
@@ -11,7 +11,9 @@
             background-color: #f4f7f6;
             margin: 0;
             padding: 20px;
+            color: #333;
         }
+
         .back-to-home {
             position: fixed;
             top: 40px; left: 50px;
@@ -24,52 +26,169 @@
             transition: transform 0.2s; z-index: 999;
         }
         .back-to-home:hover { transform: scale(1.1); }
+
+        /* ★★★ 修改点：卡片容器 ★★★ */
         .main-container {
-            width: 100%; max-width: 800px;
-            margin: 0 auto;
+            width: 100%;
+            max-width: 900px;
+            margin: 60px auto;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            padding: 40px;
+            box-sizing: border-box;
+            min-height: 500px;
         }
-        .main-title {
-            text-align: center; color: #333;
-            margin-top: 20px; margin-bottom: 30px;
+
+        .header-title {
+            text-align: center;
+            font-size: 1.8rem;
+            color: #333;
+            margin-top: 0;
+            margin-bottom: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
         }
+
         .product-list {
-            display: flex; flex-direction: column; gap: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
         }
-        .product-item-link { text-decoration: none; color: inherit; display: block; }
+
+        /* ★★★ 修改点：列表项样式 ★★★ */
         .product-item {
-            display: flex; align-items: center; background: #fff;
-            border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-            padding: 15px; gap: 20px;
+            display: flex;
+            align-items: center;
+            background: #fff;
+            border: 1px solid #eee; /* 边框风格 */
+            border-radius: 10px;
+            padding: 15px;
+            transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
+            position: relative;
         }
+        .product-item:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+            border-color: #ffc107; /* 悬停时边框变黄，呼应收藏主题 */
+        }
+
+        .product-item-link {
+            text-decoration: none;
+            color: inherit;
+            display: contents;
+        }
+
         .product-item-image {
-            width: 120px; height: 120px;
-            flex-shrink: 0; border-radius: 8px;
-            object-fit: cover; background-color: #f4f7f6;
+            width: 100px;
+            height: 100px;
+            flex-shrink: 0;
+            border-radius: 8px;
+            object-fit: cover;
+            background-color: #f8f9fa;
+            border: 1px solid #f0f0f0;
         }
+
         .product-item-details {
-            display: flex; flex-direction: column;
-            flex-grow: 1; min-width: 0; gap: 6px;
+            flex-grow: 1;
+            padding: 0 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 6px;
+            min-width: 0;
         }
+
         .product-item-title {
-            font-size: 1.1rem; font-weight: 600; margin: 0;
-            display: -webkit-box; -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical; overflow: hidden;
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin: 0;
+            color: #333;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
-        .seller-location-info { font-size: 0.85rem; color: #888; }
-        .seller-location-info .seller-name { margin-right: 15px; }
+
+        .seller-info {
+            font-size: 0.85rem;
+            color: #888;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+
         .product-item-price {
-            font-size: 1.3rem; font-weight: bold; color: #e74c3c;
+            font-size: 1.2rem;
+            font-weight: 700;
+            color: #e74c3c;
+            margin-top: 4px;
         }
-        .product-item-favorite {
-            display: flex; flex-direction: column; align-items: center;
-            justify-content: center; align-self: stretch;
+
+        .product-item-action {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 6px;
+            padding-left: 15px;
+            border-left: 1px solid #f0f0f0;
         }
+
         .favorite-btn {
-            background: none; border: none; font-size: 1.5rem;
-            color: #888; cursor: pointer; padding: 5px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 1px solid #eee;
+            background: #fff;
+            color: #ccc;
+            font-size: 1.1rem;
+            cursor: pointer;
+            transition: all 0.2s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        .favorite-btn.favorited { color: #ffc107; }
-        .favorite-count { font-size: 0.75rem; color: #888; }
+        .favorite-btn:hover {
+            background-color: #fff8e1;
+            border-color: #ffe082;
+            transform: scale(1.1);
+        }
+        .favorite-btn.favorited {
+            background-color: #fff8e1;
+            border-color: #ffc107;
+            color: #ffc107;
+        }
+
+        .favorite-count {
+            font-size: 0.75rem;
+            color: #999;
+        }
+
+        /* 空状态 */
+        .empty-state {
+            text-align: center;
+            padding: 60px 0;
+            color: #adb5bd;
+        }
+        .empty-state i {
+            font-size: 4rem;
+            margin-bottom: 20px;
+            color: #e9ecef;
+        }
+        .empty-state-btn {
+            margin-top: 20px;
+            padding: 10px 25px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+            display: inline-block;
+            transition: background 0.3s;
+        }
+        .empty-state-btn:hover { background-color: #0056b3; }
+
     </style>
 </head>
 <body>
@@ -79,10 +198,16 @@
 </a>
 
 <div class="main-container">
-    <h1 class="main-title">我的收藏</h1>
+    <h1 class="header-title">
+        <i class="fa-solid fa-star" style="color: #ffc107;"></i>
+        我的收藏
+    </h1>
+
     <main class="main-content">
         <div class="product-list" id="product-list-container">
-            <p id="loading-message">正在加载您的收藏...</p>
+            <p id="loading-message" style="text-align:center; color:#888; margin-top:40px;">
+                <i class="fa-solid fa-circle-notch fa-spin"></i> 正在加载您的收藏...
+            </p>
         </div>
     </main>
 </div>
@@ -92,7 +217,6 @@
         const productListContainer = document.getElementById('product-list-container');
         const loadingMessage = document.getElementById('loading-message');
 
-        // 检查登录
         const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
         if (!loggedInUser) {
             alert('请先登录！');
@@ -114,38 +238,42 @@
                 loadingMessage.style.display = 'none';
                 productListContainer.innerHTML = '';
 
-                if (products.length === 0) {
-                    productListContainer.innerHTML = '<p>您还没有收藏任何商品哦！</p>';
+                if (!products || products.length === 0) {
+                    productListContainer.innerHTML = `
+                        <div class="empty-state">
+                            <i class="fa-regular fa-folder-open"></i>
+                            <p>您还没有收藏任何商品哦！</p>
+                            <a href="/index.html" class="empty-state-btn">去首页逛逛</a>
+                        </div>`;
                     return;
                 }
 
-                // 渲染商品列表（逻辑与首页index.html几乎完全相同）
                 products.forEach(product => {
                     const productWrapper = document.createElement('div');
-                    productWrapper.className = 'product-wrapper';
 
                     const coverImage = product.coverImage || 'https://placehold.co/120x120/eee/ccc?text=无图';
                     const favoriteCount = product.favoriteCount || 0;
-                    const isFavoritedClass = product.isFavorited ? 'favorited' : '';
-                    const iconClass = product.isFavorited ? 'fa-solid fa-star' : 'fa-regular fa-star';
+                    const isFavoritedClass = 'favorited';
+                    const iconClass = 'fa-solid fa-star';
 
                     productWrapper.innerHTML = `
                         <div class="product-item">
-                            <a href="/product-detail.html?id=${product.id}" class="product-item-link" style="display:contents;">
+                            <a href="/product-detail.html?id=${product.id}" class="product-item-link">
                                 <img src="${coverImage}" alt="${product.title}" class="product-item-image">
                                 <div class="product-item-details">
                                     <h3 class="product-item-title">${product.title}</h3>
-                                    <div class="seller-location-info">
-                                        <span class="seller-name">商家：${product.seller.nickname}</span>
+                                    <div class="seller-info">
+                                        <i class="fa-regular fa-user"></i> 商家：${product.seller.nickname}
                                     </div>
-                                    <span class="product-item-price">¥${product.price.toFixed(2)}</span>
+                                    <div class="product-item-price">¥${product.price.toFixed(2)}</div>
                                 </div>
                             </a>
-                            <div class="product-item-favorite">
-                                <button class="favorite-btn ${isFavoritedClass}" data-product-id="${product.id}">
+
+                            <div class="product-item-action">
+                                <button class="favorite-btn ${isFavoritedClass}" data-product-id="${product.id}" title="取消收藏">
                                     <i class="${iconClass}"></i>
                                 </button>
-                                <span class="favorite-count">${favoriteCount}人已收藏</span>
+                                <span class="favorite-count">${favoriteCount}人收藏</span>
                             </div>
                         </div>`;
                     productListContainer.appendChild(productWrapper);
@@ -154,14 +282,19 @@
                 setupFavoriteButtons();
             } catch (error) {
                 console.error(error);
-                loadingMessage.textContent = '加载失败，请刷新重试。';
+                loadingMessage.style.display = 'block';
+                loadingMessage.innerHTML = '<span style="color:#dc3545;">加载失败，请刷新重试。</span>';
             }
         }
 
-        // 收藏按钮交互逻辑
         function setupFavoriteButtons() {
             document.querySelectorAll('.favorite-btn').forEach(button => {
                 button.addEventListener('click', (event) => {
+                    event.preventDefault();
+                    event.stopPropagation();
+
+                    if(!confirm('确定取消收藏该商品吗？')) return;
+
                     const productId = button.dataset.productId;
                     fetch(`/api/favorites/${productId}`, { method: 'POST' })
                         .then(response => {
@@ -169,7 +302,6 @@
                             return response.json();
                         })
                         .then(data => {
-                            // 因为在收藏页取消收藏后，该商品项应被移除，所以最简单的做法是重新加载列表
                             fetchAndRenderFavorites();
                         })
                         .catch(error => console.error("收藏操作失败:", error));
