--- a/src/main/resources/static/my-products.html
+++ b/src/main/resources/static/my-products.html
@@ -6,95 +6,174 @@
     <title>我的商品</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
+        /* 全局样式 */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             background-color: #f4f7f6;
             margin: 0;
             padding: 20px;
+            color: #333;
         }
+
+        /* 返回按钮 */
         .back-to-home {
             position: fixed;
-            top: 40px;
-            left: 50px;
-            width: 50px;
-            height: 50px;
-            background-color: #fff;
-            color: #333;
+            top: 40px; left: 50px;
+            width: 50px; height: 50px;
+            background-color: #fff; color: #333;
             border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            text-decoration: none;
+            display: flex; justify-content: center; align-items: center;
+            font-size: 20px; text-decoration: none;
             box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-            transition: transform 0.2s, box-shadow 0.2s;
-            z-index: 999;
+            transition: transform 0.2s; z-index: 999;
         }
-        .back-to-home:hover {
-            transform: scale(1.1);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-        }
+        .back-to-home:hover { transform: scale(1.1); }
+
+        /* ★★★ 修改点：主容器改为大卡片风格 (与购物车一致) ★★★ */
         .main-container {
             width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
+            max-width: 900px;
+            margin: 60px auto;
+            background-color: #fff; /* 白底 */
+            border-radius: 12px;     /* 圆角 */
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05); /* 阴影 */
+            padding: 40px;           /* 内边距 */
+            box-sizing: border-box;
+            min-height: 500px;
         }
+
         .main-title {
             text-align: center;
+            font-size: 1.8rem;
             color: #333;
-            margin-top: 20px;
+            margin-top: 0;
             margin-bottom: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
         }
+
         .product-list {
             display: flex;
             flex-direction: column;
             gap: 15px;
         }
-        .product-item-link {
-            text-decoration: none;
-            color: inherit;
-            display: block;
-        }
+
+        /* ★★★ 修改点：商品项样式调整 (适应白底) ★★★ */
         .product-item {
             display: flex;
             align-items: center;
             background: #fff;
+            border: 1px solid #eee; /* 改为边框 */
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.05);
             padding: 15px;
             gap: 20px;
-            transition: box-shadow 0.3s ease;
+            transition: all 0.2s ease;
+            position: relative;
         }
+        /* 悬停效果改为边框加深和轻微浮动 */
         .product-item:hover {
-            box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+            border-color: #007bff;
+            box-shadow: 0 4px 12px rgba(0,123,255,0.08);
+            transform: translateY(-2px);
         }
+
+        .product-item-link {
+            text-decoration: none;
+            color: inherit;
+            display: contents;
+        }
+
         .product-item-image {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             flex-shrink: 0;
             border-radius: 8px;
             object-fit: cover;
-            background-color: #eee;
+            background-color: #f8f9fa;
+            border: 1px solid #f0f0f0;
         }
+
         .product-item-details {
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
-            flex-grow: 1;
-            gap: 6px;
+            gap: 4px;
+            min-width: 0;
         }
+
         .product-item-title {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: 600;
+            margin: 0;
+            color: #333;
         }
+
         .product-item-price {
-            font-size: 1.4rem;
-            font-weight: bold;
+            font-size: 1.2rem;
+            font-weight: 700;
             color: #e74c3c;
         }
-        .edit-icon {
-            font-size: 1.5rem;
+
+        .stock-sales-info {
+            font-size: 0.85rem;
             color: #888;
+            display: flex;
+            gap: 15px;
+            margin-top: 2px;
         }
+        .info-label { color: #aaa; margin-right: 4px; }
+
+        /* 操作按钮 */
+        .product-item-action {
+            padding-left: 15px;
+            border-left: 1px solid #f0f0f0;
+            display: flex;
+            align-items: center;
+        }
+
+        .edit-btn {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #f8f9fa;
+            color: #555;
+            font-size: 1.1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: all 0.2s;
+        }
+        .product-item:hover .edit-btn {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        /* 空状态 */
+        .empty-state {
+            text-align: center;
+            padding: 60px 0;
+            color: #adb5bd;
+        }
+        .empty-state i {
+            font-size: 4rem;
+            margin-bottom: 20px;
+            color: #e9ecef;
+        }
+        .empty-state-btn {
+            margin-top: 20px;
+            padding: 10px 25px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+            display: inline-block;
+            transition: background 0.3s;
+        }
+        .empty-state-btn:hover { background-color: #0056b3; }
+
     </style>
 </head>
 <body>
@@ -104,16 +183,20 @@
 </a>
 
 <div class="main-container">
-    <h1 class="main-title">我发布的商品</h1>
+    <h1 class="main-title">
+        <i class="fa-solid fa-shop" style="color: #007bff;"></i>
+        我发布的商品
+    </h1>
     <main class="main-content">
         <div class="product-list" id="product-list-container">
-            <p id="loading-message">正在加载您的商品...</p>
+            <p id="loading-message" style="text-align:center; color:#888; margin-top:40px;">
+                <i class="fa-solid fa-circle-notch fa-spin"></i> 正在加载您的商品...
+            </p>
         </div>
     </main>
 </div>
 
 <script>
-    // JavaScript 部分与之前相同，无需修改
     document.addEventListener('DOMContentLoaded', async () => {
         const productListContainer = document.getElementById('product-list-container');
         const loadingMessage = document.getElementById('loading-message');
@@ -142,7 +225,12 @@
             loadingMessage.style.display = 'none';
 
             if (products.length === 0) {
-                productListContainer.innerHTML = '<p>您还没有发布任何商品哦，快去发布吧！</p>';
+                productListContainer.innerHTML = `
+                    <div class="empty-state">
+                        <i class="fa-solid fa-box-open"></i>
+                        <p>您还没有发布任何商品哦，快去发布吧！</p>
+                        <a href="/publish.html" class="empty-state-btn">发布商品</a>
+                    </div>`;
                 return;
             }
 
@@ -156,15 +244,20 @@
                 productLink.innerHTML = `
                     <div class="product-item">
                         <img src="${coverImage}" alt="${product.title}" class="product-item-image">
+
                         <div class="product-item-details">
                             <h3 class="product-item-title">${product.title}</h3>
                             <span class="product-item-price">¥${product.price.toFixed(2)}</span>
-                            <div style="color: #666; font-size: 0.9rem; margin-top: 5px;">
-                                库存: ${product.stock} | 销量: ${product.sales}
+                            <div class="stock-sales-info">
+                                <span><span class="info-label">库存:</span>${product.stock}</span>
+                                <span><span class="info-label">销量:</span>${product.sales}</span>
                             </div>
                         </div>
+
                         <div class="product-item-action">
-                            <i class="fa-solid fa-pen-to-square edit-icon"></i>
+                            <div class="edit-btn">
+                                <i class="fa-solid fa-pen-to-square"></i>
+                            </div>
                         </div>
                     </div>
                 `;
@@ -173,7 +266,7 @@
 
         } catch (error) {
             console.error(error);
-            loadingMessage.textContent = '加载失败，请刷新重试。';
+            loadingMessage.innerHTML = '<span style="color:#dc3545;">加载失败，请刷新重试。</span>';
         }
     });
 </script>
