--- a/src/main/resources/static/orders.html
+++ b/src/main/resources/static/orders.html
@@ -4,23 +4,183 @@
     <meta charset="UTF-8" />
     <title>我的订单</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial; margin: 24px; }
-        h1 { font-size: 20px; margin-bottom: 12px; }
-        table { width: 100%; border-collapse: collapse; }
-        th, td { padding: 10px 8px; border-bottom: 1px solid #eee; text-align: left; }
-        th { background: #fafafa; }
-        .btn { padding: 8px 12px; border: 1px solid #1677ff; background: #1677ff; color: #fff; border-radius: 4px; cursor: pointer; }
-        .btn.link { background: #fff; color: #1677ff; }
+        /* 全局样式 */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: #f4f7f6;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+
+        /* 1. 统一风格的返回按钮 */
+        .back-to-home {
+            position: fixed;
+            top: 40px; left: 50px;
+            width: 50px; height: 50px;
+            background-color: #fff; color: #333;
+            border-radius: 50%;
+            display: flex; justify-content: center; align-items: center;
+            font-size: 20px; text-decoration: none;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+            transition: transform 0.2s; z-index: 999;
+        }
+        .back-to-home:hover { transform: scale(1.1); }
+
+        /* 2. 卡片式主容器 */
+        .main-container {
+            width: 100%;
+            max-width: 1000px;
+            margin: 60px auto;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            padding: 30px;
+            box-sizing: border-box;
+            min-height: 400px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 30px;
+            font-size: 1.8rem;
+            color: #333;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+        }
+
+        /* 表格样式优化 */
+        table {
+            width: 100%;
+            border-collapse: separate; /* 改为 separate 以支持圆角 */
+            border-spacing: 0;
+            margin-bottom: 20px;
+        }
+        th {
+            text-align: left;
+            padding: 18px 15px;
+            background-color: #f8f9fa;
+            color: #666;
+            font-weight: 600;
+            border-bottom: 2px solid #e9ecef;
+            white-space: nowrap;
+        }
+        td {
+            padding: 18px 15px;
+            border-bottom: 1px solid #f1f3f5;
+            vertical-align: middle;
+            font-size: 0.95rem;
+            transition: background-color 0.2s;
+        }
+        /* 行悬停效果 */
+        tbody tr:hover td {
+            background-color: #f8faff;
+            cursor: pointer;
+        }
+        tbody tr:last-child td {
+            border-bottom: none;
+        }
+
+        /* 3. 状态标签样式 (微调配色) */
+        .status-badge {
+            padding: 6px 12px;
+            border-radius: 6px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            display: inline-block;
+            letter-spacing: 0.5px;
+        }
+        .status-created { background-color: #e7f5ff; color: #007bff; } /* 待支付/已下单 - 蓝 */
+        .status-paid { background-color: #ebfbee; color: #2b8a3e; }    /* 已支付 - 绿 */
+        .status-shipped { background-color: #fff9db; color: #f08c00; } /* 运输中 - 黄 */
+        .status-completed{ background-color: #f3f0ff; color: #6741d9; } /* 已完成 - 紫 */
+        .status-closed { background-color: #f8f9fa; color: #868e96; }  /* 已关闭 - 灰 */
+
+        /* 金额样式 */
+        .amount {
+            font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-weight: 700;
+            color: #333;
+        }
+
+        /* 订单号样式 */
+        .order-id {
+            font-family: monospace;
+            color: #495057;
+            background: #f8f9fa;
+            border: 1px solid #dee2e6;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 0.9rem;
+        }
+
+        /* 查看详情按钮样式 (Outline Style) */
+        .btn-detail {
+            padding: 6px 16px;
+            border: 1px solid #007bff;
+            background-color: transparent;
+            color: #007bff;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            cursor: pointer;
+            transition: all 0.2s;
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .btn-detail:hover {
+            background-color: #007bff;
+            color: white;
+            box-shadow: 0 2px 6px rgba(0,123,255,0.2);
+        }
+
+        /* 空状态 */
+        .empty-state {
+            text-align: center;
+            padding: 80px 0;
+            color: #adb5bd;
+        }
+        .empty-state i {
+            font-size: 4rem;
+            margin-bottom: 20px;
+            color: #e9ecef;
+        }
+        .empty-state-btn {
+            margin-top: 20px;
+            padding: 10px 25px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+            display: inline-block;
+            transition: background 0.3s;
+        }
+        .empty-state-btn:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
-<div style="margin-bottom:12px;">
-    <a class="btn link" href="/index.html">← 返回首页</a>
-</div>
 
-<h1>我的订单</h1>
-<div id="root">加载中...</div>
+<a href="/index.html" class="back-to-home">
+    <i class="fa-solid fa-arrow-left"></i>
+</a>
+
+<div class="main-container">
+    <h1>
+        <i class="fa-solid fa-file-invoice" style="color: #007bff;"></i>
+        我的订单
+    </h1>
+    <div id="root">
+        <p style="text-align:center; color:#888; margin-top: 50px;">
+            <i class="fa-solid fa-circle-notch fa-spin"></i> 正在加载订单...
+        </p>
+    </div>
+</div>
 
 <script>
     async function api(path, options={}) {
@@ -28,33 +188,80 @@
         if (!res.ok) throw new Error(await res.text() || res.status);
         return res.json();
     }
+
+    // 格式化状态显示
+    function getStatusBadge(status) {
+        switch (status) {
+            case 'CREATED': return '<span class="status-badge status-created">已下单</span>';
+            case 'PAID':    return '<span class="status-badge status-paid">已支付</span>';
+            case 'SHIPPED': return '<span class="status-badge status-shipped">运输中</span>';
+            case 'COMPLETED':return '<span class="status-badge status-completed">已完成</span>';
+            default:        return `<span class="status-badge status-closed">${status}</span>`;
+        }
+    }
+
+    // 格式化时间 (更友好的格式)
+    function formatTime(isoString) {
+        const d = new Date(isoString);
+        const date = d.toLocaleDateString('zh-CN', { year: 'numeric', month: '2-digit', day: '2-digit' });
+        const time = d.toLocaleTimeString('zh-CN', { hour12: false, hour: '2-digit', minute: '2-digit' });
+        return `<div style="font-size:0.9rem;">${date}</div><div style="font-size:0.8rem; color:#888;">${time}</div>`;
+    }
+
     (async () => {
         try {
             const rows = await api('/api/orders/my');
-            if (!rows.length) {
-                document.getElementById('root').textContent = '暂无订单';
+            const root = document.getElementById('root');
+
+            if (!rows || rows.length === 0) {
+                root.innerHTML = `
+                    <div class="empty-state">
+                        <i class="fa-regular fa-clipboard"></i>
+                        <p>您还没有相关的订单记录</p>
+                        <a href="/index.html" class="empty-state-btn">去首页逛逛</a>
+                    </div>`;
                 return;
             }
+
             const table = document.createElement('table');
-            table.innerHTML = '<thead><tr><th>订单号</th><th>下单时间</th><th>状态</th><th>总金额</th><th>地址</th></tr></thead>';
-            const tb = document.createElement('tbody');
-            rows.forEach(o => {
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
-            <td>${o.id}</td>
-            <td>${new Date(o.orderTime).toLocaleString()}</td>
-            <td>${o.status}</td>
-            <td>${o.totalAmount}</td>
-            <td>${o.address || ''}</td>
-          `;
-                tb.appendChild(tr);
-            });
-            table.appendChild(tb);
-            const root = document.getElementById('root');
+            table.innerHTML = `
+                <thead>
+                    <tr>
+                        <th width="18%">订单号</th>
+                        <th width="20%">下单时间</th>
+                        <th width="15%">状态</th>
+                        <th width="15%">总金额</th>
+                        <th width="20%">收货地址</th>
+                        <th width="12%" style="text-align:center;">操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    ${rows.map(o => `
+                        <tr onclick="location.href='/order-detail.html?id=${o.id}'">
+                            <td><span class="order-id">#${o.id}</span></td>
+                            <td>${formatTime(o.orderTime)}</td>
+                            <td>${getStatusBadge(o.status)}</td>
+                            <td class="amount">¥${o.totalAmount.toFixed(2)}</td>
+                            <td style="color:#666; font-size:0.9rem;">
+                                <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 180px;">
+                                    ${o.address || '<span style="color:#ccc">未填写</span>'}
+                                </div>
+                            </td>
+                            <td style="text-align:center;">
+                                <button class="btn-detail">
+                                    详情 <i class="fa-solid fa-angle-right" style="font-size:0.7rem;"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    `).join('')}
+                </tbody>
+            `;
+
             root.innerHTML = '';
             root.appendChild(table);
         } catch(e) {
-            document.getElementById('root').textContent = '加载失败：' + e.message;
+            document.getElementById('root').innerHTML =
+                `<div class="empty-state"><p style="color:#dc3545;">加载失败：${e.message}</p></div>`;
         }
     })();
 </script>
