--- a/src/main/resources/static/forgot-password.html
+++ b/src/main/resources/static/forgot-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>校园二手市场 - 找回密码</title>
+    <title>网上购物系统 - 找回密码</title>
     <style>
         /* 全局基础样式 */
         body {
@@ -127,7 +127,7 @@
 <body>
 
 <div class="main-container">
-    <h1 class="system-title">校园二手物品交易平台</h1>
+    <h1 class="system-title">网上购物系统</h1>
     <div class="form-container">
         <h1>找回密码</h1>
         <form id="forgotPasswordForm">
