--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>校园二手市场 - 登录</title>
+    <title>网上购物系统 - 登录</title>
     <style>
         /* 全局基础样式 */
         body {
