--- a/src/main/resources/static/publish.html
+++ b/src/main/resources/static/publish.html
@@ -229,13 +229,56 @@
                 <label for="category">商品品类 <span class="required-star">*</span></label>
                 <select id="category" name="category" required>
                     <option value="">--请选择品类--</option>
-                    <option value="electronics">数码电子</option>
-                    <option value="books">书籍教材</option>
-                    <option value="daily_necessities">生活日用</option>
-                    <option value="stationery">文具用品</option>
-                    <option value="sports">体育器材</option>
-                    <option value="clothing">衣物鞋帽</option>
-                    <option value="other">其他</option>
+                    <option value="phone">手机通讯</option>
+                    <option value="laptop">电脑办公</option>
+                    <option value="camera">摄影摄像</option>
+                    <option value="audio">影音娱乐</option>
+                    <option value="smart">智能设备</option>
+                    <option value="component">电脑配件</option>
+                    <option value="network">网络产品</option>
+                    <option value="office">办公设备</option>
+                    <option value="tv">大家电</option>
+                    <option value="kitchen_app">厨房小电</option>
+                    <option value="life_app">生活电器</option>
+                    <option value="men_cloth">男装</option>
+                    <option value="women_cloth">女装</option>
+                    <option value="underwear">内衣家居</option>
+                    <option value="shoes">流行男鞋</option>
+                    <option value="women_shoes">时尚女鞋</option>
+                    <option value="bag">箱包皮具</option>
+                    <option value="jewelry">珠宝首饰</option>
+                    <option value="watch">钟表眼镜</option>
+                    <option value="skincare">面部护肤</option>
+                    <option value="makeup">彩妆香水</option>
+                    <option value="hair">个护清洁</option>
+                    <option value="snack">休闲零食</option>
+                    <option value="drink">饮料冲调</option>
+                    <option value="fresh">生鲜水果</option>
+                    <option value="grain">粮油调味</option>
+                    <option value="baby">母婴用品</option>
+                    <option value="toys">玩具乐器</option>
+                    <option value="furniture">家具</option>
+                    <option value="decor">家居饰品</option>
+                    <option value="bedding">家纺</option>
+                    <option value="kitchen">厨具</option>
+                    <option value="pet">宠物生活</option>
+                    <option value="car">汽车用品</option>
+                    <option value="sport_wear">运动服饰</option>
+                    <option value="fitness">健身训练</option>
+                    <option value="outdoor">户外装备</option>
+                    <option value="book_lit">文学书籍</option>
+                    <option value="book_edu">教材教辅</option>
+                    <option value="book_sci">科技畅销</option>
+                    <option value="art">艺术收藏</option>
+                    <option value="medicine">医药保健</option>
+                    <option value="flower">鲜花绿植</option>
+                    <option value="service">生活服务</option>
+                    <option value="virtual">游戏充值</option>
+                    <option value="ticket">票务旅游</option>
+                    <option value="tool">五金工具</option>
+                    <option value="instrument">仪器仪表</option>
+                    <option value="industrial">工业品</option>
+                    <option value="gift">礼品</option>
                 </select>
             </div>
 
