--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>校园二手市场 - 用户注册</title>
+    <title>网上购物系统 - 用户注册</title>
     <style>
         /* 全局基础样式 */
         body {
@@ -39,7 +39,7 @@
             padding: 30px 40px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
+            width: 150%;
             max-width: 400px;
         }
 
@@ -177,7 +177,7 @@
 </head>
 <body>
 <div class="main-container">
-    <h1 class="system-title">校园二手物品交易平台</h1>
+    <h1 class="system-title">网上购物系统</h1>
 
     <div class="form-container">
         <h1>欢迎注册</h1>
